Fix spacing and flex direction for centered growls.

--- a/src/scss/nrcs-style/_growl.scss
+++ b/src/scss/nrcs-style/_growl.scss
@@ -15,11 +15,12 @@
 
 .growl-top-center {
   display: flex !important;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 // hack for now, prolly need to rework:
-.growl-top-center .toast {
+.growl-top-center .toast:first-child {
   margin-top: 16px;
 }
 
